--- a/src/components/Wrapper/style.css
+++ b/src/components/Wrapper/style.css
@@ -5,4 +5,5 @@
     background-size: cover;
     padding: 5%;
     overflow: auto;
+    text-align: center;
   }
